fixed output whitespace

--- a/Jolf.css
+++ b/Jolf.css
@@ -17,6 +17,7 @@ textarea, #output, #outCode {
 	min-width: 50ch;
 	max-width: 100%;
 	padding: 5px;
+	white-space: pre;
 }
 
 p + p {
